Fixed no white space to link

--- a/Project/static/basic.css
+++ b/Project/static/basic.css
@@ -632,6 +632,7 @@ footer {
 
 .ticker_link {
     color: #212529 !important;
+    white-space: nowrap;
 }
 
 .ticker_link:hover, .ticker_link:active {
